// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic select 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c4"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`renders correctly for a disabled select 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c7[disabled] + .c5 {
  fill: #8d8d8d;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c4"
      disabled=""
    >
      <option
        disabled=""
        value="sunny"
      >
        Sunny
      </option>
      <option
        disabled=""
        value="windy"
      >
        Windy
      </option>
      <option
        disabled=""
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`renders correctly for a full width select 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c7[disabled] + .c5 {
  fill: #8d8d8d;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
    style="width: 100%;"
    width="100%"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c4"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`renders correctly for a select with a default value 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c7[disabled] + .c5 {
  fill: #8d8d8d;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c4"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        selected=""
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`renders correctly for a select with a placeholder 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #8e9ca8;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c4"
    >
      <option
        disabled=""
        selected=""
      >
        Select weather...
      </option>
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`sizes renders correctly for a select with size large 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7[disabled] + .c5 {
  fill: #8d8d8d;
}

.c8[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9 + .c5 {
  width: 15px;
  height: 15px;
}

.c10[disabled] + .c5 {
  fill: #8d8d8d;
}

.c10 + .c5 {
  width: 25px;
  height: 25px;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4 {
  font-size: 1.5rem;
}

.c4 + .c5 {
  width: 30px;
  height: 30px;
}

.c4 + .c11 {
  width: 25px;
  height: 25px;
  top: 16px;
  right: 12px;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c4"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`sizes renders correctly for a select with size medium 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7[disabled] + .c5 {
  fill: #8d8d8d;
}

.c8[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9 + .c5 {
  width: 15px;
  height: 15px;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4 {
  font-size: 1.25rem;
}

.c4 + .c5 {
  width: 25px;
  height: 25px;
}

.c4 + .c10 {
  width: 20px;
  height: 20px;
  top: 15px;
  right: 10px;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c4"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`sizes renders correctly for a select with size small 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7[disabled] + .c5 {
  fill: #8d8d8d;
}

.c8[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4 {
  font-size: 0.8rem;
}

.c4 + .c5 {
  width: 15px;
  height: 15px;
}

.c4 + .c9 {
  width: 10px;
  height: 10px;
  top: 10px;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c4"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`states renders correctly for a select with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7[disabled] + .c5 {
  fill: #8d8d8d;
}

.c8[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9 + .c5 {
  width: 15px;
  height: 15px;
}

.c10[disabled] + .c5 {
  fill: #8d8d8d;
}

.c10 + .c5 {
  width: 25px;
  height: 25px;
}

.c11[disabled] + .c5 {
  fill: #8d8d8d;
}

.c11 + .c5 {
  width: 30px;
  height: 30px;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4 {
  border-color: #e24c67;
  box-shadow: #e24c67 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <select
      aria-invalid="true"
      aria-required="false"
      class="c4"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`states renders correctly for a select with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7[disabled] + .c5 {
  fill: #8d8d8d;
}

.c8[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9 + .c5 {
  width: 15px;
  height: 15px;
}

.c10[disabled] + .c5 {
  fill: #8d8d8d;
}

.c10 + .c5 {
  width: 25px;
  height: 25px;
}

.c11[disabled] + .c5 {
  fill: #8d8d8d;
}

.c11 + .c5 {
  width: 30px;
  height: 30px;
}

.c12[disabled] + .c5 {
  fill: #8d8d8d;
}

.c13[disabled] + .c5 {
  fill: #8d8d8d;
}

.c14[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c4"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`states renders correctly for a select with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7[disabled] + .c5 {
  fill: #8d8d8d;
}

.c8[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9 + .c5 {
  width: 15px;
  height: 15px;
}

.c10[disabled] + .c5 {
  fill: #8d8d8d;
}

.c10 + .c5 {
  width: 25px;
  height: 25px;
}

.c11[disabled] + .c5 {
  fill: #8d8d8d;
}

.c11 + .c5 {
  width: 30px;
  height: 30px;
}

.c12[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4 {
  border-color: #4ca26c;
  box-shadow: #4ca26c 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c4"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`states renders correctly for a select with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c6 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7[disabled] + .c5 {
  fill: #8d8d8d;
}

.c8[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9[disabled] + .c5 {
  fill: #8d8d8d;
}

.c9 + .c5 {
  width: 15px;
  height: 15px;
}

.c10[disabled] + .c5 {
  fill: #8d8d8d;
}

.c10 + .c5 {
  width: 25px;
  height: 25px;
}

.c11[disabled] + .c5 {
  fill: #8d8d8d;
}

.c11 + .c5 {
  width: 30px;
  height: 30px;
}

.c12[disabled] + .c5 {
  fill: #8d8d8d;
}

.c13[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c4[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4[disabled] + .c5 {
  fill: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4 {
  border-color: #ffc94c;
  box-shadow: #ffc94c 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c4"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c5 c6"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;
